rpm: Install python2-Cython in python2 environment
do_cmake.sh tests for Cython module version in python2

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>
(cherry picked from commit 6de7111e735683f2c73d4c013d9611fc02b68985)

Conflicts:
	ceph.spec.in

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -222,7 +222,9 @@ BuildRequires:  openldap-devel
 BuildRequires:  openssl-devel
 BuildRequires:  CUnit-devel
 BuildRequires:  redhat-lsb-core
-BuildRequires:	Cython%{_python_buildid}
+%if 0%{with python2}
+BuildRequires:	python2-Cython
+%endif
 BuildRequires:	python%{_python_buildid}-prettytable
 BuildRequires:	python%{_python_buildid}-sphinx
 BuildRequires:	lz4-devel >= 1.7
