--- a/qa/suites/fs/basic_functional/tasks/volume-client/test.yaml
+++ b/qa/suites/fs/basic_functional/tasks/volume-client/test.yaml
@@ -5,6 +5,10 @@ overrides:
       global:
         ms type: simple
 
+overrides:
+  ceph:
+    log-whitelist:
+      - MON_DOWN
 tasks:
   - cephfs_test_runner:
       modules:
