qa: add krbd_discard_granularity.t test
Signed-off-by: Ilya Dryomov <idryomov@gmail.com>

--- a/qa/suites/krbd/basic/tasks/krbd_discard.yaml
+++ b/qa/suites/krbd/basic/tasks/krbd_discard.yaml
@@ -6,3 +6,4 @@ tasks:
       - qa/rbd/krbd_discard_512b.t
       - qa/rbd/krbd_discard_4M.t
       - qa/rbd/krbd_zeroout.t
+      - qa/rbd/krbd_discard_granularity.t
