cmake: link against libfmt
Seastar::seastar does pull in libfmt library as a PUBLIC linkage. but we
should not depend on this. if we use fmt directly, we should link against it.

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/src/crimson/osd/CMakeLists.txt
+++ b/src/crimson/osd/CMakeLists.txt
@@ -7,4 +7,4 @@ add_executable(crimson-osd
   pg.cc
   pg_meta.cc)
 target_link_libraries(crimson-osd
-  crimson-common crimson-os crimson)
+  crimson-common crimson-os crimson fmt::fmt)
