qa/tests: added mimic-x-singleton suite to rados as symlink to qa/upgrades/mimix-x-singleton removed lumilus-x-singleton added ocopus.yaml
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/mimic-x-singleton/1-install/mimic.yaml
+++ b/qa/suites/upgrade/mimic-x-singleton/1-install/mimic.yaml
@@ -5,10 +5,10 @@ overrides:
       - \(MGR_DOWN\)
       - slow request
 meta:
-- desc: install ceph/luminous latest
+- desc: install ceph/mimic latest
 tasks:
 - install:
-    branch: luminous
+    branch: mimic
     exclude_packages:
       - librados3
       - ceph-mgr-dashboard
@@ -17,6 +17,6 @@ tasks:
       - ceph-mgr-rook
       - ceph-mgr-ssh
     extra_packages: ['librados2']
-- print: "**** done install luminous"
+- print: "**** done install mimic"
 - ceph:
 - print: "**** done ceph"
