--- a/qa/suites/upgrade/mimic-x-singleton/4-workload/rbd-cls.yaml
+++ b/qa/suites/upgrade/mimic-x-singleton/4-workload/rbd-cls.yaml
@@ -4,7 +4,7 @@ meta:
 split_tasks:
   sequential:
   - workunit:
-      branch: luminous
+      branch: mimic
       clients:
         client.0:
           - cls/test_cls_rbd.sh
