--- a/qa/suites/upgrade/nautilus-x/parallel/2-workload/test_rbd_python.yaml
+++ b/qa/suites/upgrade/nautilus-x/parallel/2-workload/test_rbd_python.yaml
@@ -4,7 +4,7 @@ meta:
 workload:
   full_sequential:
     - workunit:
-        branch: luminous
+        branch: nautilus
         clients:
           client.0:
             - rbd/test_librbd_python.sh
