--- a/src/tools/immutable_object_cache/CMakeLists.txt
+++ b/src/tools/immutable_object_cache/CMakeLists.txt
@@ -14,6 +14,6 @@ add_executable(ceph-immutable-object-cache
 target_link_libraries(ceph-immutable-object-cache
   ceph_immutable_object_cache_lib
   librados
-  stdc++fs
+  StdFilesystem::filesystem
   global)
 install(TARGETS ceph-immutable-object-cache DESTINATION bin)
