qa/rgw: point test repos at ceph-nautilus branch
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/qa/suites/upgrade/luminous-x/parallel/5-final-workload/rgw_swift.yaml
+++ b/qa/suites/upgrade/luminous-x/parallel/5-final-workload/rgw_swift.yaml
@@ -5,6 +5,6 @@ rgw-final-workload:
   full_sequential:
   - swift:
       client.1:
-        force-branch: ceph-master
+        force-branch: ceph-nautilus
         rgw_server: client.1
   - print: "**** done swift 4-final-workload"
