--- a/src/ceph.in
+++ b/src/ceph.in
@@ -96,7 +96,7 @@ def get_pythonlib_dir():
     return "lib.{version[0]}".format(version=sys.version_info)
 
 
-def get_cmake_variables(names):
+def get_cmake_variables(*names):
     vars = dict((name, None) for name in names)
     for line in open(os.path.join(MYPDIR, "CMakeCache.txt")):
         # parse lines like "WITH_ASAN:BOOL=ON"
@@ -106,14 +106,13 @@ def get_cmake_variables(names):
                 break
         if all(vars.values()):
             break
-    return vars
+    return [vars[name] for name in names]
 
 
 if os.path.exists(os.path.join(MYPDIR, "CMakeCache.txt")) \
      and os.path.exists(os.path.join(MYPDIR, "bin/init-ceph")):
-    vars = get_cmake_variables(["ceph_SOURCE_DIR", "ASAN_LIBRARY"])
-    src_path = vars["ceph_SOURCE_DIR"]
-    asan_lib_path = vars["ASAN_LIBRARY"]
+    src_path, asan_lib_path = \
+        get_cmake_variables("ceph_SOURCE_DIR", "ASAN_LIBRARY")
     if src_path is None:
         # Huh, maybe we're not really in a cmake environment?
         pass
