qa/suites/upgrade/nautilus-x-singleton: upgrade mgrs early
The mgrmap may change when the mons upgrade, causing the mgr daemons to
respawn.  Restart mgr daemons before mons to avoid a mismatch between
the running version and the ondisk binary.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/nautilus-x-singleton/2-partial-upgrade/firsthalf.yaml
+++ b/qa/suites/upgrade/nautilus-x-singleton/2-partial-upgrade/firsthalf.yaml
@@ -9,6 +9,8 @@ tasks:
     mon.b:
 - print: "**** done install.upgrade osd.0"
 - ceph.restart:
+    daemons: [mgr.x, mgr.y]
+- ceph.restart:
     daemons: [mon.a, mon.b]
     wait-for-healthy: false
     mon-health-to-clog: false
