rpm: Try replacing fixed "python34" with "%{_python_buildid}
centos builds are failing; looks like a 3.4 version of
Cython is explicitly installed, but python3 -> python3.6
can't find it.  Try making the python34 deps be
sensitive to the python 3 version in the rpm macros.

Signed-off-by: Dan Mick <dan.mick@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -264,8 +264,8 @@ BuildRequires:	python2-Cython
 %endif
 %if 0%{?rhel} == 7
 BuildRequires:	python34-devel
-BuildRequires:	python34-setuptools
-BuildRequires:	python34-Cython
+BuildRequires:	python%{_python_buildid}-setuptools
+BuildRequires:	python%{_python_buildid}-Cython
 %else
 BuildRequires:	python3-devel
 BuildRequires:	python3-setuptools
