cmake: check for libpython of the same version of interpreter
actually cython or python3-cython's dependencies should take care of it.
but we should at least get it right on our side if we check it.

Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit c961e002d22ab7ceec20f1019f8c558ec9fcce6c)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -229,7 +229,7 @@ if(WITH_PYTHON3)
     set(WITH_PYTHON3 "3")
   endif()
   find_package(Python3Interp ${WITH_PYTHON3} REQUIRED)
-  find_package(Python3Libs ${WITH_PYTHON3} REQUIRED)
+  find_package(Python3Libs ${PYTHON_VERSION_STRING} REQUIRED)
 endif()
 
 # the major version of the python bindings as a dependency of other
