rpm: install python%{python3_pkgversion}-devel on el7
as RHEL 7.7 support a native python3.6, we cannot hardwire to python3.4
on RHEL7/CentOS7 anymore.

Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit d1e83082b42f784d83b2342bb953d3931a940173)

Conflicts:
	ceph.spec.in: trivial resolution

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -191,15 +191,10 @@ BuildRequires:	Cython
 BuildRequires:	python-prettytable
 BuildRequires:	python-sphinx
 %endif
-# python34-... for RHEL, python3-... for all other supported distros
 %if 0%{?rhel}
-BuildRequires:	python34-devel
-BuildRequires:	python34-setuptools
-BuildRequires:	python34-Cython
-%else
-BuildRequires:	python3-devel
-BuildRequires:	python3-setuptools
-BuildRequires:	python3-Cython
+BuildRequires:	python%{python3_pkgversion}-devel
+BuildRequires:	python%{python3_pkgversion}-setuptools
+BuildRequires:	python%{python3_pkgversion}-Cython
 %endif
 # lttng and babeltrace for rbd-replay-prep
 %if %{with lttng}
