--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -29,7 +29,7 @@ markComment: >
   activity occurs for another 30 days.
   
   If you are a maintainer or core committer, please follow-up on this
-  issue to identify what steps should be taken by the author to move this
+  pull request to identify what steps should be taken by the author to move this
   proposed change forward.
   
   If you are the author of this pull request, thank you for your proposed
