rgw: scheduler tests: fix cli script
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>

--- a/src/test/rgw/rgw_scheduler_tests/eg/rgw_tests.conf
+++ b/src/test/rgw/rgw_scheduler_tests/eg/rgw_tests.conf
@@ -1,14 +1,12 @@
 [DEFAULT]
 auth_type = s3
-admin_sock_path = /ssd/builds/cpp/ceph-nautilus/build/out/radosgw.8000.asok
+admin_sock_path = /var/run/ceph/radosgw.asok # this is only necessary for tests
 req_count = 25
 base_url = http://localhost:8000/
-access_key = ZXBIFASJABUNKBSVXHVO
-secret_key = jg1bV5LzyKQZw2qcAI8SML7ayHmnfKvMs5oN9lmSQT2dbJvxbDTtWQ==
-user_id = foo.client.rgw
-email = foo.client.rgw+test@test.test
-display_name = Mr. foo.client.rgw
-create_buckets = "rbucket1, rbucket2"
+access_key = access1
+secret_key = secret1
+create_buckets = rbucket1, rbucket2
+response_handler = req_type
 [get_bucket1]
 req_path = rbucket1
 req_type = GET
