rgw: scheduler tests: add a simple readme
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>

--- a/src/test/rgw/rgw_scheduler_tests/eg/rgw_tests.conf
+++ b/src/test/rgw/rgw_scheduler_tests/eg/rgw_tests.conf
@@ -6,7 +6,8 @@ base_url = http://localhost:8000/
 access_key = access1
 secret_key = secret1
 create_buckets = rbucket1, rbucket2
-response_handler = req_type
+response_handler = simple # default, choose between simple, path, req_type
+
 [get_bucket1]
 req_path = rbucket1
 req_type = GET
