qa/suites/rbd: added writearound cache test permutations
Also tweaked the existing writeback cache test permutations to
specify the use of the writeback cache policy.

Fixes:  http://tracker.ceph.com/issues/39386
Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/qa/suites/rbd/singleton/all/qemu-iotests-writearound.yaml
+++ b/qa/suites/rbd/singleton/all/qemu-iotests-writearound.yaml
@@ -8,7 +8,7 @@ tasks:
     conf:
       client:
         rbd cache: true
-        rbd cache policy: writeback
+        rbd cache policy: writearound
 - workunit:
     clients:
       all: [rbd/qemu-iotests.sh]
