--- a/qa/suites/rbd/thrash/workloads/rbd_fsx_cache_writearound.yaml
+++ b/qa/suites/rbd/thrash/workloads/rbd_fsx_cache_writearound.yaml
@@ -7,4 +7,4 @@ overrides:
     conf:
       client:
         rbd cache: true
-        rbd cache policy: writeback
+        rbd cache policy: writearound
