qa/suites/upgrade: use correct branch names
Signed-off-by: Neha Ojha <nojha@redhat.com>

--- a/qa/suites/upgrade/mimic-x-singleton/1-install/mimic.yaml
+++ b/qa/suites/upgrade/mimic-x-singleton/1-install/mimic.yaml
@@ -17,6 +17,6 @@ tasks:
       - ceph-mgr-rook
       - ceph-mgr-ssh
     extra_packages: ['librados2']
-- print: "**** done install luminous"
+- print: "**** done install mimic"
 - ceph:
 - print: "**** done ceph"
