--- a/qa/suites/upgrade/nautilus-x/parallel/1-ceph-install/nautilus.yaml
+++ b/qa/suites/upgrade/nautilus-x/parallel/1-ceph-install/nautilus.yaml
@@ -1,6 +1,6 @@
 meta:
 - desc: |
-   install ceph/luminous latest
+   install ceph/nautilus latest
    run workload and upgrade-sequence in parallel
    upgrade the client node
 tasks:
