--- a/qa/suites/upgrade/nautilus-x/stress-split/4-workload/rbd-import-export.yaml
+++ b/qa/suites/upgrade/nautilus-x/stress-split/4-workload/rbd-import-export.yaml
@@ -3,7 +3,7 @@ meta:
    run basic import/export cli tests for rbd
 stress-tasks:
 - workunit:
-    branch: luminous
+    branch: nautilus
     clients:
       client.0:
         - rbd/import_export.sh
