--- a/qa/suites/upgrade/nautilus-x/stress-split/4-workload/rbd_api.yaml
+++ b/qa/suites/upgrade/nautilus-x/stress-split/4-workload/rbd_api.yaml
@@ -3,7 +3,7 @@ meta:
    librbd C and C++ api tests
 stress-tasks:
 - workunit:
-     branch: luminous
+     branch: nautilus
      clients:
         client.0:
            - rbd/test_librbd.sh
