--- a/qa/suites/upgrade/nautilus-x/stress-split/7-final-workload/rbd-python.yaml
+++ b/qa/suites/upgrade/nautilus-x/stress-split/7-final-workload/rbd-python.yaml
@@ -8,7 +8,7 @@ overrides:
         rbd default clone format: 1
 tasks:
 - workunit:
-    branch: luminous
+    branch: nautilus
     clients:
       client.0:
         - rbd/test_librbd_python.sh
