--- a/src/test/crimson/CMakeLists.txt
+++ b/src/test/crimson/CMakeLists.txt
@@ -10,10 +10,10 @@ target_link_libraries(unittest_seastar_denc crimson GTest::Main)
 
 add_executable(unittest_seastar_messenger test_messenger.cc)
 add_ceph_unittest(unittest_seastar_messenger)
-target_link_libraries(unittest_seastar_messenger ceph-common crimson)
+target_link_libraries(unittest_seastar_messenger crimson)
 
 add_executable(perf_crimson_msgr perf_crimson_msgr.cc)
-target_link_libraries(perf_crimson_msgr ceph-common crimson)
+target_link_libraries(perf_crimson_msgr crimson)
 
 add_executable(perf_async_msgr perf_async_msgr.cc)
 target_link_libraries(perf_async_msgr ceph-common global)
