--- a/src/tools/ceph-dencoder/CMakeLists.txt
+++ b/src/tools/ceph-dencoder/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 
 set(dencoder_srcs
   ceph_dencoder.cc
+  ../../include/uuid.cc
   $<TARGET_OBJECTS:common_texttable_obj>)
 if(WITH_RADOSGW)
   list(APPEND dencoder_srcs
