common: make utime_t dencoder-compatible
Signed-off-by: Greg Farnum <gfarnum@redhat.com>

--- a/src/tools/ceph-dencoder/CMakeLists.txt
+++ b/src/tools/ceph-dencoder/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 set(dencoder_srcs
   ceph_dencoder.cc
   ../../include/uuid.cc
+  ../../include/utime.cc
   $<TARGET_OBJECTS:common_texttable_obj>)
 if(WITH_RADOSGW)
   list(APPEND dencoder_srcs
