--- a/qa/suites/rgw/multisite/overrides.yaml
+++ b/qa/suites/rgw/multisite/overrides.yaml
@@ -10,5 +10,7 @@ overrides:
         rgw curl low speed time: 300
         rgw md log max shards: 4
         rgw data log num shards: 4
+        rgw sync meta inject err probability: 0.1
+        rgw sync data inject err probability: 0.1
   rgw:
     compression type: random
