src/osd: refactor to use ostream_temp
The concept of emitting log lines to a central mon log is likely
to be useful for both crimson and classic, but the mechanism is
likely to be different.  Break out OstreamTemp for use in interface.

Signed-off-by: Samuel Just <rexludorum@gmail.com>

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -20,6 +20,7 @@ set(common_srcs
   HeartbeatMap.cc
   LogClient.cc
   LogEntry.cc
+  ostream_temp.cc
   Mutex.cc
   OutputDataSocket.cc
   PluginRegistry.cc
