--- a/qa/suites/upgrade/client-upgrade-mimic/mimic-client-x/basic/1-install/mimic-client-x.yaml
+++ b/qa/suites/upgrade/client-upgrade-mimic/mimic-client-x/basic/1-install/mimic-client-x.yaml
@@ -1,7 +1,7 @@
 tasks:
 - install:
     branch: mimic 
-    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev']
+    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev','python34-cephfs','python34-rados']
 - print: "**** done install mimic"
 upgrade_workload:
   sequential:
