--- a/qa/suites/upgrade/client-upgrade-mimic/mimic-client-x/rbd/1-install/mimic-client-x.yaml
+++ b/qa/suites/upgrade/client-upgrade-mimic/mimic-client-x/rbd/1-install/mimic-client-x.yaml
@@ -1,8 +1,8 @@
 tasks:
 - install:
-    branch: luminous
-    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev']
-- print: "**** done install luminous"
+    branch: mimic
+    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev','python34-cephfs','python34-rados']
+- print: "**** done install mimic"
 - install.upgrade:
    exclude_packages: ['ceph-test', 'ceph-test-dbg','libcephfs1']
    client.1:
