--- a/qa/suites/upgrade/client-upgrade-luminous/luminous-client-x/rbd/1-install/luminous-client-x.yaml
+++ b/qa/suites/upgrade/client-upgrade-luminous/luminous-client-x/rbd/1-install/luminous-client-x.yaml
@@ -1,7 +1,7 @@
 tasks:
 - install:
     branch: luminous
-    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev']
+    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev','python34-cephfs','python34-rados']
 - print: "**** done install luminous"
 - install.upgrade:
    exclude_packages: ['ceph-test', 'ceph-test-dbg','libcephfs1']
