qa/tests: Excluded "'python34-cephfs','python34-rados'" for runs on nautilus
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/client-upgrade-jewel/jewel-client-x/basic/1-install/jewel-client-x.yaml
+++ b/qa/suites/upgrade/client-upgrade-jewel/jewel-client-x/basic/1-install/jewel-client-x.yaml
@@ -1,7 +1,7 @@
 tasks:
 - install:
     branch: jewel 
-    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev']
+    exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev','python34-cephfs','python34-rados']
 - print: "**** done install jewel"
 upgrade_workload:
   sequential:
