--- a/src/ceph.in
+++ b/src/ceph.in
@@ -125,7 +125,9 @@ if os.path.exists(os.path.join(MYPDIR, "CMakeCache.txt")) \
         pythonlib_path = os.path.join(lib_path,
                                       "cython_modules",
                                       get_pythonlib_dir())
-        if with_seastar and build_type == 'Debug':
+        if asan_lib_path.endswith('NOTFOUND'):
+            with_asan = False
+        elif with_seastar and build_type == 'Debug':
             with_asan = True
         respawn_in_path(lib_path, pybind_path, pythonlib_path,
                         asan_lib_path if with_asan else None)
