--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ attrs==18.1.0             # via pytest
 babel==2.4.0              # via osc-lib, oslo.i18n, python-cinderclient, python-glanceclient, python-neutronclient, python-novaclient, python-openstackclient
 backports.ssl-match-hostname==3.5.0.1
 bcrypt==3.1.6             # via paramiko
-beanstalkc==0.4.0
+beanstalkc3==0.4.0
 boto3==1.9.161
 boto==2.46.1
 botocore==1.12.161        # via boto3, s3transfer
