--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -104,6 +104,7 @@ endif()
 
 if(WITH_LTTNG)
   add_dependencies(os objectstore-tp)
+  add_dependencies(os bluestore-tp)
 endif()
 
 target_link_libraries(os kv)
@@ -125,6 +126,6 @@ if(WITH_BLUESTORE_PMEM)
   target_link_libraries(os pmem::pmem)
 endif()
 
-if(WITH_LTTNG AND WITH_EVENTTRACE)
+if(WITH_EVENTTRACE)
   add_dependencies(os eventtrace_tp)
 endif()
