--- a/src/tracing/CMakeLists.txt
+++ b/src/tracing/CMakeLists.txt
@@ -57,7 +57,8 @@ if(WITH_OSD_INSTRUMENT_FUNCTIONS)
   add_tracing_library(cyg_profile_tp cyg_profile.tp 1.0.0)
   install(TARGETS cyg_profile_tp DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
-if(WITH_LTTNG AND WITH_EVENTTRACE)
+
+if(WITH_EVENTTRACE)
   add_tracing_library(eventtrace_tp eventtrace.tp 1.0.0)
   install(TARGETS eventtrace_tp DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
