luminous: osd: Modify lazy omap stats to only show one copy
Only show stats from the primary to get more in line with other pg stats
representations.

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>
(cherry picked from commit 490829c8eaf14f41de978ac0f93ecda3df8bcdef)

--- a/src/test/lazy-omap-stats/CMakeLists.txt
+++ b/src/test/lazy-omap-stats/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 add_executable(ceph_test_lazy_omap_stats
   main.cc
-  lazy-omap-stats-test.cc)
+  lazy_omap_stats_test.cc)
 target_link_libraries(ceph_test_lazy_omap_stats
   librados ${UNITTEST_LIBS} Boost::system)
 install(TARGETS
