--- a/qa/suites/upgrade/mimic-x/parallel/0-cluster/start.yaml
+++ b/qa/suites/upgrade/mimic-x/parallel/0-cluster/start.yaml
@@ -18,6 +18,7 @@ roles:
   - osd.2
   - osd.3
 - - mon.c
+  - mgr.z
   - mds.b
   - osd.4
   - osd.5
@@ -37,6 +38,23 @@ overrides:
     - \(SLOW_OPS\)
     - overall HEALTH_
     - \(MON_MSGR2_NOT_ENABLED\)
+    - overall HEALTH_
+    - \(MGR_DOWN\)
+    - \(PG_
+    - replacing it with standby
+    - No standby daemons available
+    - \(FS_DEGRADED\)
+    - \(MDS_FAILED\)
+    - \(MDS_DEGRADED\)
+    - \(FS_WITH_FAILED_MDS\)
+    - \(MDS_DAMAGE\)
+    - \(MDS_ALL_DOWN\)
+    - \(MDS_UP_LESS_THAN_MAX\)
+    - \(OSD_DOWN\)
+    - \(OSD_HOST_DOWN\)
+    - \(POOL_APP_NOT_ENABLED\)
+    - pauserd,pausewr flag\(s\) set
+    - Monitor daemon marked osd\.[[:digit:]]+ down, but it is still running
     conf:
       global:
         enable experimental unrecoverable data corrupting features: "*"
