mon: split osdmon pool (part 1 - functions)
Signed-off-by: Joao Eduardo Luis <joao@suse.com>

--- a/src/mon/CMakeLists.txt
+++ b/src/mon/CMakeLists.txt
@@ -6,6 +6,7 @@ set(lib_mon_srcs
   Paxos.cc
   PaxosService.cc
   OSDMonitor.cc
+  osd/pool.cc
   MDSMonitor.cc
   CommandHandler.cc
   FSCommands.cc
