cmake: some executables need to link agains rados_test_stub
Otherwise Clang/LLVM linker will complain about missing exactly those
functions that are flattened in rados_test_stub

Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>

--- a/src/test/mon/CMakeLists.txt
+++ b/src/test/mon/CMakeLists.txt
@@ -39,3 +39,6 @@ add_executable(unittest_mon_montypes
   )
 add_ceph_unittest(unittest_mon_montypes)
 target_link_libraries(unittest_mon_montypes mon global)
+if(FREEBSD)
+  target_link_libraries(unittest_mon_montypes rados_test_stub)
+endif()
