cmake: move tests to where they are implemented
Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/src/pybind/mgr/CMakeLists.txt
+++ b/src/pybind/mgr/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_subdirectory(dashboard)
+add_subdirectory(insights)
+add_subdirectory(ansible)
+add_subdirectory(orchestrator_cli)
 
 # Location needs to match default setting for mgr_module_path, currently:
 # OPTION(mgr_module_path, OPT_STR, CEPH_PKGLIBDIR "/mgr")
