--- a/src/pybind/mgr/insights/CMakeLists.txt
+++ b/src/pybind/mgr/insights/CMakeLists.txt
@@ -1,4 +1,4 @@
 if(WITH_TESTS)
   include(AddCephTest)
-  add_tox_test(mgr-insights ${CMAKE_CURRENT_SOURCE_DIR})
+  add_tox_test(mgr-insights)
 endif()
