--- a/src/tools/cephfs/CMakeLists.txt
+++ b/src/tools/cephfs/CMakeLists.txt
@@ -49,6 +49,6 @@ if(WITH_CEPHFS_SHELL)
   endif()
   if(WITH_TESTS)
     include(AddCephTest)
-    add_tox_test(cephfs-shell ${CMAKE_CURRENT_SOURCE_DIR})
+    add_tox_test(cephfs-shell)
   endif()
 endif()
