mgr/dashboard: Unify Tasks and Notifications into a sidebar
Fixes: https://tracker.ceph.com/issues/37402

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -71,6 +71,7 @@
     "@auth0/angular-jwt": "2.1.1",
     "@ngx-translate/i18n-polyfill": "1.0.0",
     "@swimlane/ngx-datatable": "15.0.2",
+    "async-mutex": "0.1.4",
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
     "detect-browser": "4.7.0",
@@ -79,9 +80,11 @@
     "moment": "2.24.0",
     "ng-block-ui": "2.1.7",
     "ng-bootstrap-form-validation": "5.0.0",
+    "ng-sidebar": "9.1.1",
     "ng2-charts": "2.3.0",
     "ng2-tree": "2.0.0-rc.11",
     "ngx-bootstrap": "5.1.2",
+    "ngx-store": "2.1.0",
     "ngx-toastr": "11.0.0",
     "rxjs": "6.5.3",
     "rxjs-compat": "6.5.3",
