qa/tests: added rbd_fsx tests to the tests mix
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/nautilus-p2p/nautilus-p2p-parallel/point-to-point-upgrade.yaml
+++ b/qa/suites/upgrade/nautilus-p2p/nautilus-p2p-parallel/point-to-point-upgrade.yaml
@@ -136,6 +136,10 @@ workload_nautilus:
            rgw_server: client.0
            scan_for_encryption_keys: false
      - print: "**** done s3tests workload_nautilus"
+     - rbd_fsx:
+         clients: [client.0]
+         size: 134217728
+     - print: "**** done rbd_fsx workload_nautilus"
 
 upgrade-sequence_nautilus:
    sequential:
