--- a/debian/control
+++ b/debian/control
@@ -83,7 +83,7 @@ Build-Depends: cmake (>= 3.5),
 # Crimson      ragel,
 # Make-Check   socat,
 # Crimson      systemtap-sdt-dev,
-               uuid-dev,
+# Make-Check   uuid-dev,
                uuid-runtime,
                valgrind,
                virtualenv | python-virtualenv,
