mon: move ro commands to cc file
Signed-off-by: Joao Eduardo Luis <joao@suse.com>

--- a/src/mon/CMakeLists.txt
+++ b/src/mon/CMakeLists.txt
@@ -12,6 +12,7 @@ set(lib_mon_srcs
   MgrMonitor.cc
   MgrStatMonitor.cc
   Monitor.cc
+  commands/monmapmon_cmds.cc
   MonmapMonitor.cc
   LogMonitor.cc
   AuthMonitor.cc
