mon: move osdmon commands to specific file
Signed-off-by: Joao Eduardo Luis <joao@suse.com>

--- a/src/mon/CMakeLists.txt
+++ b/src/mon/CMakeLists.txt
@@ -13,6 +13,7 @@ set(lib_mon_srcs
   MgrStatMonitor.cc
   Monitor.cc
   commands/monmapmon_cmds.cc
+  commands/osdmon_cmds.cc
   MonmapMonitor.cc
   LogMonitor.cc
   AuthMonitor.cc
