qa/rgw: rgw/website suite uses subdomain calling format
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/qa/suites/rgw/website/overrides.yaml
+++ b/qa/suites/rgw/website/overrides.yaml
@@ -23,3 +23,5 @@ overrides:
         valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
       client.1:
         valgrind: [--tool=memcheck, --max-threads=1024] # http://tracker.ceph.com/issues/25214
+  s3tests:
+    calling-format: subdomain
