ceph: make 'ceph tell mgr.*' send to the active mgr
We can only send tell commands to the active mgr.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/src/ceph.in
+++ b/src/ceph.in
@@ -211,8 +211,9 @@ def mgrids():
     d = json.loads(outbuf.decode('utf-8'))
     l = []
     l.append(d['active_name'])
-    for i in d['standbys']:
-        l.append(i['name'])
+    # we can only send tell commands to the active mgr
+    #for i in d['standbys']:
+    #    l.append(i['name'])
     return l
 
 
