qa/barbican: pin barbican to 5.0.1 release
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/qa/suites/rgw/crypt/2-kms/barbican.yaml
+++ b/qa/suites/rgw/crypt/2-kms/barbican.yaml
@@ -55,6 +55,7 @@ tasks:
           description: Swift Service
 - barbican:
     client.0:
+      sha1: 5.0.1
       force-branch: master
       use-keystone-role: client.0
       keystone_authtoken:
