mgr/dashboard: enable the user to download/copy a smartctl report of a device
Fixes: https://tracker.ceph.com/issues/41822
Signed-off-by: Patrick Seidensal <pseidensal@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -75,6 +75,7 @@
     "chart.js": "2.8.0",
     "core-js": "3.1.4",
     "detect-browser": "4.6.0",
+    "file-saver": "^2.0.2",
     "fork-awesome": "1.1.7",
     "lodash": "4.17.15",
     "moment": "2.24.0",
@@ -95,6 +96,7 @@
     "@angular/compiler-cli": "8.2.0",
     "@angular/language-service": "8.2.0",
     "@compodoc/compodoc": "1.1.10",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.6",
     "@types/jest": "24.0.16",
